--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   text-align: center;
   background-color: #5c6bc0;
   color: white;
-  font-size: 12px;
+  font-size: 20px;
 }
 
 /* .App-logo {
@@ -46,7 +46,7 @@ body {
 }
 
 .heading {
-  font-size: 34px;
+  font-size: 60px;
   font-weight: 600;
   text-align: center;
   line-height: 1.5;
@@ -82,7 +82,14 @@ li {
 .one {
   height: 1000px;
 }
-
+.alice-carousel__prev-btn,
+.alice-carousel__next-btn {
+  display: none !important;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
 @media screen and (max-width: 1024px) {
   .container {
     width: 100%;
