--- a/src/App.css
+++ b/src/App.css
@@ -69,14 +69,7 @@ ul#horizontal-list {
 }
 ul#horizontal-list li {
   display: inline;
-}
-li {
-  margin: 5px;
-}
-
-.section {
-  min-height: 250px;
-  padding: 100px 0;
+  margin: 15px;
 }
 
 .one {
@@ -86,9 +79,32 @@ li {
 .alice-carousel__next-btn {
   display: none !important;
 }
+
+.aboutMeBox {
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-gap: 2%;
+}
+.aboutMe {
+  margin: 50px;
+  max-width: 700px;
+}
+.picture {
+  width: 100%;
+  object-fit: cover;
+  max-width: 500px;
+}
+
+.portfolioPics {
+  max-width: 300px;
+}
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.cvImg {
+  box-shadow: 10px 10px 5px grey;
 }
 @media screen and (max-width: 1024px) {
   .container {
