added to nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  font-size: 1em;
 }
 
 .table {
@@ -68,10 +69,24 @@ body {
   background-color: white;
   color: black;
 }
+.logo {
+  max-width: 120px;
+}
+
+.github,
+.linkedin {
+  max-width: 40px;
+  margin: 5px;
+}
+
 ul#horizontal-list {
   list-style: none;
   padding: 20px 0;
   margin: 0px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  justify-content: space-around;
 }
 ul#horizontal-list li {
   display: inline;
