--- a/src/App.css
+++ b/src/App.css
@@ -62,16 +62,14 @@ body {
   height: 90vh;
   font-size: 1em;
 }
-.navBox {
-  max-height: 160px;
-}
+
 ul#horizontal-list {
   list-style: none;
   margin: 0px;
   padding: 0;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 ul#horizontal-list li {
   display: inline;
