--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,48 @@ body {
   width: 1160px;
   margin: 0 auto;
 }
+.navBox {
+  max-height: 16vh;
+  height: 16vh;
+}
+.headerBox {
+  margin: 0 auto;
+  background-color: white;
+  color: black;
+  width: auto;
+}
+ul#horizontal-list {
+  list-style: none;
+  margin: 0px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.navButtons {
+  display: flex;
+}
+ul#horizontal-list li {
+  display: flex;
+  margin: 15px;
+}
 
+.logo {
+  width: 120px;
+}
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 82vh;
+  font-size: 1em;
+}
+
+.cv {
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 .heading {
   font-size: 60px;
   font-weight: 600;
@@ -54,37 +95,6 @@ body {
 }
 .headingText {
   font-size: 15px;
-}
-.home {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 90vh;
-  font-size: 1em;
-}
-
-ul#horizontal-list {
-  list-style: none;
-  margin: 0px;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-ul#horizontal-list li {
-  display: inline;
-  margin: 15px;
-}
-.table {
-  margin: 0 auto;
-  width: auto;
-  background-color: white;
-  color: black;
-  width: 100%;
-  height: 10vh;
-}
-.logo {
-  width: 120px;
 }
 
 .github,
@@ -106,7 +116,7 @@ ul#horizontal-list li {
   justify-content: center;
   flex-wrap: wrap;
 }
-.aboutMe {
+.aboutMeText {
   margin: 50px;
   max-width: 700px;
 }
