--- a/src/App.css
+++ b/src/App.css
@@ -160,16 +160,25 @@ a {
   left: 10px;
   font-size: 25px;
 }
+.myModal img {
+  max-width: 600px;
+}
 
 @media only screen and (max-width: 800px) {
   .cvImg {
     max-width: 600px;
     display: inline;
   }
+  .myModal img {
+    max-width: 600px;
+  }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 600px) {
   .cvImg {
+    max-width: 300px;
+  }
+  .myModal img {
     max-width: 300px;
   }
 }
