--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
   background-color: white;
   color: black;
   font-size: 20px;
+  height: 100%;
 }
 
 /* .App-logo {
@@ -73,8 +74,12 @@ ul#horizontal-list li {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  height: 90.7vh;
   font-size: 1em;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('./images/background.jpg');
 }
 
 .cv {
