--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ ul#horizontal-list li {
   font-weight: 600;
   text-align: center;
   line-height: 1.5;
-  margin: auto;
+  margin: 30px 30px;
 }
 .heading {
   font-family: 'Titillium Web', sans-serif;
