--- a/src/App.css
+++ b/src/App.css
@@ -6,42 +6,14 @@ body {
   height: 100%;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.backgroundPic {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('./images/background.jpg');
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-} */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.navBox {
+.backgroundPic .headerBox {
+  background-color: transparent;
 }
 .headerBox {
   margin: 0 auto;
@@ -74,10 +46,6 @@ ul#horizontal-list li {
   justify-content: center;
   height: 90vh;
   font-size: 1em;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url('./images/background.jpg');
 }
 .homeChild {
   background: white;
