updated modal photos

--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,9 @@ a {
     width: 100% !important;
     height: auto !important;
   }
+  .portfolioImage {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -222,5 +225,8 @@ a {
   }
   .logo {
     width: 80px;
+  }
+  .portfolioImage {
+    width: 100%;
   }
 }
