--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,9 @@ a {
   .portfolioImage {
     width: 100%;
   }
+  .githubModal {
+    width: 70px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -228,5 +231,8 @@ a {
   }
   .portfolioImage {
     width: 100%;
+  }
+  .githubModal {
+    width: 50px;
   }
 }
